--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 	<title>Habit-Tool</title>
+	<meta name="description"
+		content="This is a website on which you will be able to track a daily streak. You can use this tool to build a habit or simply for fun, whatever you like :)" />
 </head>
 
 <body data-sveltekit-preload-data="hover">
