removed unused stuff

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
-	<title>Habit-Tool</title>
+	<title>Habify</title>
 	<meta name="description"
 		content="This is a website on which you will be able to track a daily streak. You can use this tool to build a habit or simply for fun, whatever you like :)" />
 </head>
